welcome.lessons.welcome.variables.Variables.scala.error
Variables:1: error: not found: value Y
Y=0
^Variables:3: error: not found: value Y
		Y=Y+1
                ^