welcome.lessons.welcome.variables.Variables.scala.code
Y=0
	while (!estSurBiscuit())
		Y=Y+1
		avance();//avance jusqua au biscuit
	if (estSurBiscuit())
		prendBiscuit();//prend le biscuit
	